# market-simulator

./: .dockerignore  .gitignore  ADVANCED_DETECTION_SUMMARY.md  AGENTS.md  CICD.md  DEVELOPMENT_GUIDE.md  Dockerfile  LEARNING_PATH.md  MANIPULATION_STRATEGIES.md  Makefile  PROJECT_INDEX.md  README.md  START_HERE.md  TOMORROW_START.md  docker-compose.yml  pyproject.toml  run_agents.py
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  docs.yml  release.yml
GUIDES/: DEVOPS_SUMMARY.md  QUICK_START_ADVANCED_DETECTION.md  README.md
dashboard/: IMPROVEMENTS.md  README.md  app.py  requirements.txt
dashboard/components/: __init__.py  charts.py  config.py  layout.py  theme.py  utils.py
docs/: ADVANCED_DETECTION_GUIDE.md  architecture.md  modules_core.md  modules_manipulation.md  modules_viz.md  overview.md  roadmap.md  simulation_flow.md  theory.md
examples/: advanced_detection_demo.py  manipulation_simulation.py  manipulation_strategies.py
notebooks/: 01_random_walk.ipynb  02_wealth_limits.ipynb  03_pump_and_dump.ipynb  04_detection_forensics.ipynb  README.md
src/market_lab/: __init__.py
src/market_lab/agents/: __init__.py  actions.py  core.py  organization.py  runner.py  specialists.py
src/market_lab/core/: market.py  orders.py  sentiment.py  simulation.py  traders.py
src/market_lab/experiments/: random_walk.py
src/market_lab/manipulation/: __init__.py  advanced_detection.py  detection.py  layering.py  manipulator.py  metrics.py  spoofing.py  wash_trading.py
src/market_lab/viz/: animation.py  plots.py
tests/: __init__.py  conftest.py
tests/test_core/: test_market.py  test_orders.py  test_simulation.py  test_traders.py
tests/test_manipulation/: test_advanced_detection.py  test_manipulator.py
