[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-lab"
version = "0.1.0"
description = "Educational simulator for studying market manipulation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Market Manipulation Lab"}
]
dependencies = []

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
ml = [
    "scikit-learn>=1.0",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "mypy>=1.7",
]
all = [
    "matplotlib>=3.8",
    "scikit-learn>=1.0",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["market_lab"]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
